--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/postcss": "^4.1.3",
-    "stencil-tailwind-plugin": "^2.0.3",
-    "tailwindcss": "^4.1.3",
+    "stencil-tailwind-plugin": "2.0.5",
+    "tailwindcss": "4.1.14",
     "typescript": "^5.8.3"
   }
 }
